; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/crypto/extr_camellia_glue.c_camellia_setup192.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/crypto/extr_camellia_glue.c_camellia_setup192.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @camellia_setup192 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @camellia_setup192(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [32 x i8], align 16
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @memcpy(i8* %8, i8* %9, i32 24)
  %11 = bitcast i32* %6 to i8*
  %12 = load i8*, i8** %3, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 16
  %14 = call i32 @memcpy(i8* %11, i8* %13, i32 8)
  %15 = load i32, i32* %6, align 4
  %16 = xor i32 %15, -1
  store i32 %16, i32* %7, align 4
  %17 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %18 = getelementptr inbounds i8, i8* %17, i64 24
  %19 = bitcast i32* %7 to i8*
  %20 = call i32 @memcpy(i8* %18, i8* %19, i32 8)
  %21 = getelementptr inbounds [32 x i8], [32 x i8]* %5, i64 0, i64 0
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @camellia_setup256(i8* %21, i32* %22)
  ret void
}

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @camellia_setup256(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
